--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -3,12 +3,12 @@
 .footer {
   font-family: map-get(variables.$fonts, "font2"), serif;
   padding: 2rem 0;
-
+  
   .logo-holder {
     position: relative;
     text-align: center;
   }
-
+  
   .line {
     position: absolute;
     top: 50%;
@@ -17,17 +17,17 @@
     height: 2px;
     background-color: map-get(variables.$colors, "color1");
   }
-
+  
   .logo {
     position: relative;
     background-color: white;
     padding: 0 10px;
   }
-
+  
   .logo-icon {
     width: 1.5rem;
   }
-
+  
   .footer-menus {
     max-width: 1900px;
     width: 100%;
@@ -38,11 +38,11 @@
     justify-content: space-between;
     color: map-get(variables.$colors, "color3");
   }
-
+  
   .menu {
     font-size: 0.8rem;
   }
-
+  
   .menu-text {
     font-size: 1.3rem;
     color: map-get(variables.$colors, "color5");
@@ -52,35 +52,39 @@
   .socialmedias {
     margin-top: 2rem;
   }
-
+  
   .submenus {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 1rem 3rem;
+    gap: 1rem;
   }
-
+  
   .submenu {
     position: relative;
   }
-
+  
   .subscription-menu {
     max-width: 500px;
-    width: 55%;
+    width: 41%;
   }
-
+  
   .subscription-menu,
   .socialmedias-menu {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
-
+  
+  .socialmedias-menu {
+    align-items: flex-start;
+  }
+  
   .subscription-field {
     display: flex;
     justify-content: space-between;
   }
-
+  
   .email-input {
     border: none;
     outline: none;
@@ -90,7 +94,7 @@
     padding: 0;
     width: 83%;
   }
-
+  
   .send-button {
     border: none;
     background-color: transparent;
@@ -98,18 +102,18 @@
     color: inherit;
     padding: 0;
   }
-
+  
   .underline {
     width: 100%;
     height: 1px;
     background-color: map-get(variables.$colors, "color3");
     margin-top: 3%;
   }
-
+  
   .instagram {
     margin-bottom: 0.3rem;
   }
-
+  
   .instagram,
   .facebook {
     position: relative;
@@ -118,7 +122,7 @@
     justify-content: space-between;
     gap: 10px;
   }
-
+  
   .instagram-icon,
   .facebook-icon {
     width: 1.2rem;
